@@ -1,3 +1,8 @@
+2000-06-13  Brent Verner <brent@rcfile.org>
+
+	* bits/streambuf.tcc: repaired _S_copy_streambufs()
+	* testsuite/27_io/ostream_inserter_other.cc (test03): Added testcase.
+	
 2000-06-12  Benjamin Kosnik  <bkoz@purist.soma.redhat.com>
 
 	* bits/locale_facets.h (ctype<wchar_t>): Remove unnecessary data
